kong/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kong
  name: kong
  labels:
    app: kong
spec:
  selector:
    matchLabels:
      app: kong
  #replicas: 1
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong
        image: kong
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m     
        volumeMounts:
          - name: kongconfig
            mountPath: /kong
        ports:
        - name: data-http
          containerPort: 8000
        ports:
        - name: data-https
          containerPort: 8443          
      volumes:
      - name: kongconfig
        configMap:
          name: kongconfig
