kong/templates/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kong-kong-proxy
  namespace: kong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kong.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kong-kong-proxy
          port: 443
          scheme: https
  tls:
    secretName: kong-tls

---

kind: Service
apiVersion: v1
metadata:
  name: developer-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: developer.durp.info
spec:
  type: ExternalName
  externalName: a89ff7f4357c.us.portal.konghq.com

---

kind: Service
apiVersion: v1
metadata:
  name: kong-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kong.durp.info
spec:
  type: ExternalName
  externalName: durp.info

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kong-api-proxy
  namespace: kong
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.durp.info`) && PathPrefix(`/`)
      middlewares:
      - name: authentik-proxy-provider
        namespace: traefik
      kind: Rule
      services:
        - name: kong-kong-proxy
          port: 443
          scheme: https
  tls:
    secretName: kong-tls

---

kind: Service
apiVersion: v1
metadata:
  name: api-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.durp.info
spec:
  type: ExternalName
  externalName: durp.info
